--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Simple CI
+name: Simple CI with Docker
 
 on: [push, pull_request]
 
@@ -10,13 +10,8 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4   
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18  
+      - name: Build docker image
+        run: docker build -t myapp:test -f Dockerfile.dev .
 
-      - name: Install dependencies
-        run: npm install    
-
-      - name: Run tests
-        run: npm test -- --watchAll=false
+      - name: Run tests in container
+        run: docker run --rm myapp:test npm test -- --watchAll=false
