--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,6 @@ jobs:
         run: docker build -t myapp:test -f Dockerfile.dev .
 
       - name: Run tests in container
-        run: docker run --rm myapp:test npm test -- --watchAll=false
+        run: docker run --rm myapp:test npm test -- --coverage 
+        
+        #watchAll=false
