--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,4 @@ jobs:
         run: docker build -t myapp:test -f Dockerfile.dev .
 
       - name: Run tests in container
-        run: docker run --rm myapp:test npm test -- --coverage 
-        
-        #watchAll=false
+        run: docker run --rm myapp:test npm test -- --coverage --watchAll=false
