--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,18 @@ jobs:
 
       - name: Run tests in container
         run: docker run --rm myapp:test npm test -- --coverage --watchAll=false
+
+
+
+      - name: Deploy to Elastic Beanstalk
+        if: github.ref == 'refs/heads/master'
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          application_name: "docker"
+          environment_name: "docker-env"
+          region: "us-east-1"
+          version_label: "v-${{ github.sha }}"
+          deployment_package: "."
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
