--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest  
-
+    runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v4   
@@ -16,17 +15,22 @@ jobs:
       - name: Run tests in container
         run: docker run --rm myapp:test npm test -- --coverage --watchAll=false
 
-
+  deploy:
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Deploy to Elastic Beanstalk
-        if: github.ref == 'refs/heads/master'
         uses: einaregilsson/beanstalk-deploy@v21
         with:
-          application_name: "docker"
-          environment_name: "Docker-env"
-          region: "eu-central-1" #frankfurt
-          version_label: "v-${{ github.sha }}"
-          deployment_package: "."
+          application_name: "docker"          
+          environment_name: "Docker-env"     
+          region: "eu-central-1"                
+          version_label: "v-${{ github.sha }}" 
+          deployment_package: "."            
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
