--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Zip deployment package
+        run: zip -r deploy.zip .
+
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
         with:
@@ -30,6 +33,6 @@ jobs:
           environment_name: "Docker-env"     
           region: "eu-central-1"                
           version_label: "v-${{ github.sha }}" 
-          deployment_package: "."            
+          deployment_package: "deploy.zip"            
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
