--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           application_name: "docker"          
           environment_name: "Docker-env"     
-          region: "eu-central-1"                
+          region: "eu-central-1"
+          use_existing_version_if_available: true               
           version_label: "v-${{ github.sha }}" 
           deployment_package: "deploy.zip"            
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
